<resources>
    <string name="app_name">PointE MaterialX</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="info">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backbtn">BackBtn</string>
    <string name="savebtn">SaveBtn</string>
    <string name="favourite">Favourite</string>
    <string name="save">Save Note</string>
    <string name="user_email">Email</string>
    <string name="user_pass">Password</string>
    <string name="forget">Forget Password ?</string>
    <string name="user_confpass">Confirm Password</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forget_passtext2">Provide your accounts\'s email for which you want to reset your password</string>
    <string name="recover">Recover</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="hello_there">Hello There</string>
    <string name="log_in_to_continue">Log In to continue</string>
    <string name="add">Add</string>
    <string name="app_name2">PointE</string>
    <string name="share">Share App</string>
    <string name="rate">Rate and Review</string>
    <string name="about">About</string>
    <string name="addtitle">Title</string>
    <string name="addcontent">Note</string>
    <string name="view_type">View Type :</string>
    <string name="search">Search</string>
    <string name="addnote">AddNote</string>

    <string name="dark_theme">Dark Theme</string>
    <string name="system_theme">MODE_NIGHT_FOLLOW_SYSTEM</string>

    <string name="ui">UI</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="note_title">Title</string>
    <string name="note_content">Note</string>
    <string name="log_out">Log Out</string>
    <string name="copy_right">Copyrights %1$d</string>
    <string name="about_desc">This is a Simple Note Taking android application Build with AndroidX and Material Design.</string>
    <string name="no_notes">Dash No Notes</string>
    <string name="start_writing">Start writing Notes !</string>

</resources>