<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.ForgotPasswordActivity"
    android:padding="20dp"
    android:id="@+id/forgetpass_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back"/>

        <TextView
            android:id="@+id/forget_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/forgot_password"
            android:textSize="55sp" />

        <TextView
            android:id="@+id/forget_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/forget_passtext2"
            android:layout_marginTop="15dp"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgotpass_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            app:startIconDrawable="@drawable/ic_outline_email_24"
            android:hint="@string/user_email"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_recover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.PointEMaterialX.Button"
            android:layout_marginTop="40dp"
            android:text="@string/recover"
            android:layout_gravity="center"
            android:textSize="25sp"/>

    </LinearLayout>


</LinearLayout>